@@ -8,80 +8,83 @@
 FirePHPProcessor.Init = function() {
 
   this.RegisterConsoleStyleSheet('chrome://firephp/content/RequestProcessor.css');
-  
-  this.RegisterConsoleTemplate('trace',
-    domplate(Firebug.Rep,
-    {
-      className: 'firephp-trace',
-      tag:
-          DIV({class: "head", _repObject: "$object"},
-              A({class: "title", onclick: "$onToggleBody"}, "$object|getCaption")
-          ),
-    
-      infoTag: DIV({class: "info"},
-             TABLE({cellpadding: 3, cellspacing: 0},
-              TBODY(
-                TR(
-                    TD({class:'headerFile'},'File'),
-                    TD({class:'headerLine'},'Line'),
-                    TD({class:'headerInst'},'Instruction')
-                ),
-                FOR("call", "$object|getCallList",
-                    TR({},
-                        TD({class:'cellFile'},
-                            DIV({}, "$call.file")
-                        ),
-                        TD({class:'cellLine'},
-                            DIV({}, "$call.line")
-                        ),
-                        TD({class:'cellInst'},
-                            DIV({},  "$call|getCallLabel(",
-                              FOR("arg", "$call|argIterator",
-                                  TAG("$arg.tag", {object: "$arg.value"}),
-                                  SPAN({class: "arrayComma"}, "$arg.delim")
-                              ),
-                              ")")
-                        )
-                      )
-                    )
-                  )
-                )
-              ),
-              
-    
-      getCaption: function(item)
-      {
-        return item.Class+': '+item.Message;
+
+
+  function getTraceTemplate() {
+    return domplate(Firebug.Rep, {
+      tag: DIV({
+        class: "head",
+        _repObject: "$object"
+      }, A({
+        class: "title",
+        onclick: "$onToggleBody"
+      }, "$object|getCaption")),
+      
+      infoTag: DIV({
+        class: "info"
+      }, TABLE({
+        cellpadding: 3,
+        cellspacing: 0
+      }, TBODY(TR(TD({
+        class: 'headerFile'
+      }, 'File'), TD({
+        class: 'headerLine'
+      }, 'Line'), TD({
+        class: 'headerInst'
+      }, 'Instruction')), FOR("call", "$object|getCallList", TR({}, TD({
+        class: 'cellFile'
+      }, DIV({}, "$call.file")), TD({
+        class: 'cellLine'
+      }, DIV({}, "$call.line")), TD({
+        class: 'cellInst'
+      }, DIV({}, "$call|getCallLabel(", FOR("arg", "$call|argIterator", TAG("$arg.tag", {
+        object: "$arg.value"
+      }), SPAN({
+        class: "arrayComma"
+      }, "$arg.delim")), ")"))))))),
+      
+      
+      getCaption: function(item){
+        if (item.Class && item.Type == 'throw') {
+          return item.Class + ': ' + item.Message;
+        }
+        else {
+          return item.Message;
+        }
       },
-    
-      onToggleBody: function(event)
-      {
+      
+      onToggleBody: function(event){
         var target = event.currentTarget;
-        var logRow = getAncestorByClass(target, "logRow-firephp-trace");
-        if (isLeftClick(event))
-        {
+        var logRow = getAncestorByClass(target, 'logRow-'+this.className);
+        if (isLeftClick(event)) {
           toggleClass(logRow, "opened");
-    
-          if (hasClass(logRow, "opened"))
-          {
-    
-            /* Lets only render the stack trace once we request it */        
-            if (!getChildByClass(logRow, "head", "info"))
-            {
-                this.infoTag.append({'object':getChildByClass(logRow, "head").repObject},
-                                    getChildByClass(logRow, "head"));
+          
+          if (hasClass(logRow, "opened")) {
+          
+            /* Lets only render the stack trace once we request it */
+            if (!getChildByClass(logRow, "head", "info")) {
+              this.infoTag.append({
+                'object': getChildByClass(logRow, "head").repObject
+              }, getChildByClass(logRow, "head"));
             }
           }
         }
       },
       
-      getCallList: function(call) {
+      getCallList: function(call){
         var list = call.Trace;
-        list.unshift({'file':call.File,'line':call.Line,'class':call.Class,'type':'throw'});
+        list.unshift({
+          'file': call.File,
+          'line': call.Line,
+          'class': call.Class,
+          'function': call.Function,
+          'type': call.Type,
+          'args': call.Args
+        });
         /* Now that we have all call events, lets sew if we can shorten the filename.
-         * This only works for unif filepaths for now.
-         * TODO: Get this working for windows filepaths as well.
-         */
+       * This only works for unif filepaths for now.
+       * TODO: Get this working for windows filepaths as well.
+       */
         try {
           if (list[0].file.substr(0, 1) == '/') {
             var file_shortest = list[0].file.split('/');
@@ -105,35 +108,55 @@ FirePHPProcessor.Init = function() {
               }
             }
           }
-        } catch(e) {}
+        } 
+        catch (e) {
+        }
         return list;
       },
       
-      getCallLabel: function(call) {
-        if(call['class']) {
-          if(call['type']=='throw') {
-           return 'throw '+call['class'];
-          } else {
-            return call['class']+call['type']+call['function'];
+      getCallLabel: function(call){
+        if (call['class']) {
+          if (call['type'] == 'throw') {
+            return 'throw ' + call['class'];
+          }
+          else {
+            return call['class'] + call['type'] + call['function'];
           }
         }
         return call['function'];
       },
       
-      argIterator: function(call) {
-        if (!call.args) return [];
+      argIterator: function(call){
+        if (!call.args) 
+          return [];
         var items = [];
-        for (var i = 0; i < call.args.length; ++i)
-        {
-            var arg = call.args[i];
-            var rep = Firebug.getRep(arg);
-            var tag = rep.shortTag ? rep.shortTag : rep.tag;
-            var delim = (i == call.args.length-1 ? "" : ", ");
-            items.push({name: 'arg'+i, value: arg, tag: tag, delim: delim});
+        for (var i = 0; i < call.args.length; ++i) {
+          var arg = call.args[i];
+          var rep = Firebug.getRep(arg);
+          var tag = rep.shortTag ? rep.shortTag : rep.tag;
+          var delim = (i == call.args.length - 1 ? "" : ", ");
+          items.push({
+            name: 'arg' + i,
+            value: arg,
+            tag: tag,
+            delim: delim
+          });
         }
         return items;
       }
+      
+    });
+  }
     
+  this.RegisterConsoleTemplate('exception',domplate(getTraceTemplate(),
+    {
+      className: 'firephp-exception',
+    })
+  );
+
+  this.RegisterConsoleTemplate('trace',domplate(getTraceTemplate(),
+    {
+      className: 'firephp-trace',
     })
   );
 
@@ -265,7 +288,7 @@ FirePHPProcessor.ProcessRequest = function(URL,Data) {
 
   if (data['FirePHP.Firebug.Console']) {
 
-    Firebug.Console.openGroup(URL);
+    Firebug.Console.openGroup([URL], null, "firephpRequestGroup", null, false);
 
     /* 
      * We wrap the logging code to ensure we can close the group
@@ -279,12 +302,27 @@ FirePHPProcessor.ProcessRequest = function(URL,Data) {
         if (item && item.length==2) {
         
           var mode = item[0].toLowerCase();
-          if (mode == 'log' || mode == 'info' || mode == 'warn' || mode == 'table') {
+          
+          /* Change mode from TRACE to EXCEPTION for backwards compatibility */
+          if (mode == 'trace') {
+            var change = true;
+            for (var key in item[1]) {
+              if (key == 'Type') {
+                change = false;
+              }
+            }
+            if (change) {
+              mode = 'exception';
+              item[1].Type = 'throw';
+            }
+          }
+                    
+          if (mode == 'log' || mode == 'info' || mode == 'warn' || mode == 'table' || mode == 'trace') {
           
             this.logToFirebug(mode, item[1]);
             
           } else 
-          if (mode == 'error' || mode == 'trace') {
+          if (mode == 'error' || mode == 'exception') {
           
             Firebug.Errors.increaseCount(this.context);
             
